--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "serve": "node server.js"
   },
   "repository": "git+https://github.com/ESOF423/attorney-form-builder.git",
   "author": "Matthew <matthewcnitschke@gmail.com>",
@@ -15,5 +16,8 @@
   "homepage": "https://github.com/ESOF423/attorney-form-builder#readme",
   "devDependencies": {
     "mocha": "^5.0.0"
+  },
+  "dependencies": {
+    "express": "^4.16.2"
   }
 }
