--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mocha": "^5.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "md5": "^2.2.1",
     "mysql": "^2.15.0"
