--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
+    "test:e2e": "mocha test/e2e",
     "serve": "node server.js"
   },
   "repository": "git+https://github.com/ESOF423/attorney-form-builder.git",
@@ -16,7 +17,9 @@
   "homepage": "https://github.com/ESOF423/attorney-form-builder#readme",
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.0.0"
+    "faker": "^4.1.0",
+    "mocha": "^5.0.0",
+    "puppeteer": "^1.0.0"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
