--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
+    "css-loader": "^0.28.10",
     "faker": "^4.1.0",
     "mocha": "^5.0.0",
     "puppeteer": "^1.0.0",
+    "style-loader": "^0.20.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9"
   },
@@ -33,7 +35,9 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "md5": "^2.2.1",
+    "moment": "^2.20.1",
     "mysql": "^2.15.0",
+    "node-latex": "^2.4.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   }
