--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mysql": "^2.15.0",
     "node-latex": "^2.4.4",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "uuid": "^3.2.1"
   }
 }
