--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "css-loader": "^0.28.10",
     "faker": "^4.1.0",
     "mocha": "^5.0.0",
+    "node-sass": "^4.7.2",
     "puppeteer": "^1.0.0",
-    "style-loader": "^0.20.2",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9"
   },
