Added working stripe implementation

--- a/helpers/config.json
+++ b/helpers/config.json
@@ -2,5 +2,8 @@
     "mysql": {
         "user": "root",
         "password": "esof@MSU"
+    },
+    "stripe": {
+        "serverKey": "sk_test_F0ujkgtxvSMdQroDCahdAhGI"
     }
 }
