--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development --watch",
-    "test": "mocha",
+    "test": "nyc mocha",
     "test:e2e": "mocha test/e2e",
     "serve": "node app.js"
   },
