--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "dev": "webpack --mode development --watch",
     "test": "mocha",
     "test:e2e": "mocha test/e2e",
+    "test:unit": "nyc --reporter=html --reporter=text mocha test/unit",
     "serve": "node app.js",
     "t": "mocha test/e2e/form-builder.test.js"
   },
@@ -23,6 +25,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
     "css-loader": "^0.28.10",
     "faker": "^4.1.0",
     "mocha": "^5.0.0",
@@ -41,6 +44,7 @@
     "moment": "^2.20.1",
     "mysql": "^2.15.0",
     "node-latex": "^2.4.4",
+    "npm": "^5.8.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-quill": "^1.2.6",
