--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack --mode development --watch",
     "test": "mocha",
     "test:e2e": "mocha test/e2e",
-    "test:unit": "nyc --reporter=html --reporter=text mocha test/unit",
+    "test:unit": "nyc mocha test/unit",
     "serve": "node app.js",
     "t": "mocha test/e2e/form-builder.test.js"
   },
