--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "nyc": {
+    "sourceMap": false,
+    "instrument": false
+  },
   "scripts": {
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "dev": "webpack --mode development --watch",
-    "test": "mocha --recursive",
+    "test": "nyc mocha --recursive",
     "test:e2e": "mocha test/e2e",
-    "test:unit": "nyc mocha test/unit",
+    "test:unit": "mocha test/unit",
     "serve": "node app.js"
   },
   "repository": "git+https://github.com/ESOF423/attorney-form-builder.git",
@@ -30,13 +33,14 @@
     "mocha": "^5.0.0",
     "node-sass": "^4.7.2",
     "nyc": "^11.6.0",
-    "puppeteer": "^1.0.0",
+    "puppeteer": "^1.2.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9"
   },
   "dependencies": {
+    "babel-plugin-istanbul": "^4.1.6",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
@@ -44,6 +48,7 @@
     "moment": "^2.20.1",
     "mysql": "^2.15.0",
     "node-latex": "^2.4.4",
+    "node.js": "0.0.0",
     "npm": "^5.8.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
